.sisyphus/evidence/task-40-demo.log
warning: patch `ark-bn254 v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-crypto-primitives v0.5.0 (https://github.com/flyingnobita/crypto-primitives?rev=f559264#f5592640)` was not used in the crate graph
warning: patch `ark-ec v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-ff v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-groth16 v0.5.0 (https://github.com/arkworks-rs/groth16?rev=b3b4a15#b3b4a152)` was not used in the crate graph
warning: patch `ark-grumpkin v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-poly v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-poly-commit v0.5.0 (https://github.com/arkworks-rs/poly-commit#a05ec99d)` was not used in the crate graph
warning: patch `ark-serialize v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-snark v0.5.1 (https://github.com/arkworks-rs/snark#845ce9d5)` was not used in the crate graph
help: Check that the patched package version and available features are compatible
      with the dependency requirements. If the patch has a different version from
      what is locked in the Cargo.lock file, run `cargo update` to use the new
      version. This may also occur with an optional dependency that is not enabled.
warning: pvthfhe-fhe@0.1.0: MOCK BACKEND ACTIVE — XOR/SHA256 ONLY. Set PVTHFHE_I_UNDERSTAND_THIS_IS_A_MOCK=1 to use.
warning: pvthfhe-aggregator@0.1.0: aggregator: folding uses CycloFoldStepCircuit with real Ajtai commitments (CycloNizkAdapter)
   Compiling pvthfhe-compressor v0.1.0 (/home/dev/pvthfhe/crates/pvthfhe-compressor)
error[E0425]: cannot find value `parsed` in this scope
    --> crates/pvthfhe-compressor/src/nova/mod.rs:1755:12
     |
1755 | ...  if parsed.publi...
     |         ^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `pvthfhe-compressor` (lib) due to 1 previous error
